src/test/deca/context/invalid/class_int.deca
// Contextually, not possible to call class such as int

class int {
    
}